# dump-roblox-api

./: Cargo.toml  README.md
src/: main.rs
src/apis/: mod.rs  studio_version.rs
src/apis/dumper/: class.rs  enums.rs  mod.rs
