[package]
name = "dump-roblox-api"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.53"
colog = "1.4.0"
color-eyre = "0.6.5"
getopts = "0.2.24"
log = "0.4.29"
reqwest = {version = "0.12.24", features = ["json"]}
serde = "1.0.228"
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"]}
