[package]
name = "dump-roblox-api"
version = "1.0.3"
edition = "2024"
homepage = "https://github.com/bob448/dump-roblox-api/"
authors = ["@bob448 on github"]
repository = "https://github.com/bob448/dump-roblox-api/"
readme = "README.md"
description = "Dumps all roblox classes and enums into either a luau table or Rust structs and values."
license = "MIT"
keywords = ["roblox", "gamedev", "dump", "api", "luau"]

[dependencies]
clap = "4.5.53"
colog = "1.4.0"
color-eyre = "0.6.5"
log = "0.4.29"
reqwest = {version = "0.12.24", features = ["json"]}
serde = "1.0.228"
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"]}
